create new search route

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,7 +22,7 @@
             </ul>
           </li>
         </ul>
-        <form action="/" method="POST" novalidate class="d-flex validated-form" role="search">
+        <form action="/anime/search" method="POST" novalidate class="d-flex validated-form" role="search">
           <input name="title" class="form-control me-2" type="search" placeholder="Search Anime" aria-label="Search" required>
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
